assets/scss/common.scss
//  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

// - Spacing system (px)
// 2 / 4 / 8 / 12 / 16 / 20 / 24 / 32 / 48 / 64 / 80 / 96 / 128
@import 'keyframes.scss';

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body,
button {
  font-family: 'Zen Kaku Gothic New';
  line-height: 1.5;
  color: $black;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 0;
  appearance: none;
}

p {
  font-weight: 400;
}

body.side-nav-open {
  max-height: 100vh;
  overflow: hidden;
}

.hide-over-xs {
  @include mq(xs) {
    display: none;
  }
}

.show-over-xs {
  display: none;

  @include mq(xs) {
    display: block;
  }
}

.show-over-sm {
  display: none;

  @include mq(sm) {
    display: block;
  }
}

h1,
h2,
h3 {
  font-family: 'Zen Antique';
  color: $white;
  font-weight: 500;
}

.black-background {
  background-color: $black;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.white-background {
  background: $white;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.grid {
  display: grid;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  cursor: pointer;
}

.content {
  flex: 1;
  margin-bottom: 48px;
  position: relative;

  @include mq(sm) {
    margin-bottom: 64px;
  }

  @include mq(lg) {
    margin-bottom: 80px;
  }
}

.no-margin-content {
  flex: 1;
  position: relative;
}

.container {
  width: 100%;
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;

  @include mq(sm) {
    padding: 0 28px;
  }
}

.center {
  text-align: center;
}

.primary-button {
  display: inline-block;
  margin: 0 auto;
  color: $white;
  font-size: 18px;
  font-weight: 700;
  background-color: $primary;
  border-radius: 24px;
  padding: 8px 24px;
  border: none;
  letter-spacing: 2px;

  @include mq(sm) {
    padding: 10px 24px;
  }

  @include mq() {
    font-size: 20px;
    padding: 10px 48px;
    border-radius: 32px;
  }
}

.section-heading {
  font-family: 'Zen Antique';
  color: $white;
  font-size: 30px;
  margin-bottom: 24px;
  font-weight: 400;
  letter-spacing: 4px;
  text-align: center;

  @include mq(sm) {
    font-size: 36px;
    letter-spacing: 5px;
  }

  @include mq() {
    font-size: 44px;
    margin-bottom: 48px;
    letter-spacing: 6px;
  }
}

.margin-bottom {
  margin-bottom: 32px;

  @include mq(sm) {
    margin-bottom: 48px;
  }

  @include mq() {
    margin-bottom: 64px;
  }
}

.page-title {
  font-size: 44px;
  font-weight: 400;
  font-family: 'Zen Antique';

  @include mq(sm) {
    font-size: 52px;
  }

  @include mq() {
    font-size: 72px;
  }
}

.close-modal-button {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 6px 18px;
  font-size: 16px;
  color: $white;
  border: none;
  background-color: $secondary;
  border-radius: 20px;
  justify-self: end;
  grid-row: 1;

  @include mq(sm) {
    grid-column: 2;
  }

  @include mq(lg) {
    font-size: 20px;
    padding: 7px 24px;
    border-radius: 32px;
  }

  &:hover {
    cursor: pointer;
  }
}

.close-icon {
  width: 12px;
  height: 12px;

  @include mq(lg) {
    width: 16px;
    height: 16px;
  }
}

.analyze-background {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #fff;
  width: 100%;
  min-height: 200px;
  padding: 20px;
  border-radius: $radius-xs;
  margin-top: -8px;
  margin-bottom: 24px;

  @include mq(sm) {
    border-radius: $radius-sm;
    padding: 32px 24px;
    margin-top: -24px;
    margin-bottom: 32px;
  }

  @include mq() {
    min-height: 250px;
    padding: 48px 32px;
    margin-top: -32px;
    margin-bottom: 48px;
  }

  @include mq(lg) {
    min-height: 350px;
  }
}

